Small fix on responsive spacing of profile picture Contact page

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,3 +1,7 @@
+.container {
+  margin: 30px 0;
+}
+
 .contact-image {
   text-align: right;
   padding-right: 50px;
@@ -53,6 +57,9 @@ a {
 }
 
 @media (max-width: 575px) {
+  .container {
+    margin-top: 0;
+  }
   .contact-image,
   .contact-info {
     text-align: center;
